--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,9 +1,1 @@
-idf_component_register(
-  SRCS
-  "app_main.c"
-  INCLUDE_DIRS
-  "."
-  REQUIRES
-  rgb_led
-  drivers
-  driver)
+idf_component_register(SRCS "app_main.c" INCLUDE_DIRS "." REQUIRES rgb_led)
