--- a/main/components/tsl2561/CMakeLists.txt
+++ b/main/components/tsl2561/CMakeLists.txt
@@ -1,1 +1,1 @@
-idf_component_register(SRCS "tsl2561.c" INCLUDE_DIRS "include" REQUIRES driver)
+idf_component_register(SRCS "tsl2561.c" INCLUDE_DIRS "include" REQUIRES i2c_bus)
