feat: wifi connection

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,10 +2,14 @@ idf_component_register(
   SRCS
   "app_main.c"
   "utils/map_value.c"
+  "wifi.c"
+  "mqtt.c"
   INCLUDE_DIRS
   "."
   "utils"
   REQUIRES
+  esp_wifi
+  nvs_flash
   rgb_led
   tsl2561
   bmp280
