fix: single mqtt emit plus small refactor

--- a/main/components/mqtt_manager/CMakeLists.txt
+++ b/main/components/mqtt_manager/CMakeLists.txt
@@ -4,6 +4,8 @@ idf_component_register(
   INCLUDE_DIRS
   "include"
   REQUIRES
+  app_config
   mqtt
   sensor_aggregator
-  secrets)
+  secrets
+  json)
