--- a/docker/mosquitto/mosquitto.conf
+++ b/docker/mosquitto/mosquitto.conf
@@ -1,3 +1,5 @@
 listener 1883
 allow_anonymous false
-password_file /mosquitto/config/passwd
+password_file /mosquitto/data/passwd
+persistence true
+persistence_location /mosquitto/data/
