feat: influxdb basic setup

--- a/docker/nodered/package.json
+++ b/docker/nodered/package.json
@@ -9,5 +9,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "node-red-contrib-influxdb": "^0.7.0"
+  }
 }
