--- a/docker/compose.dev.yml
+++ b/docker/compose.dev.yml
@@ -12,26 +12,25 @@ services:
       - MQTT_USERNAME=${MQTT_USERNAME}
       - MQTT_PASSWORD=${MQTT_PASSWORD}
     volumes:
-      - ./mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
       - mosquitto-data-dev:/mosquitto/data
       - mosquitto-logs-dev:/mosquitto/log
 
-  # influxdb2:
-  #   image: influxdb:2-alpine
-  #   container_name: influxdb2
-  #   ports:
-  #     - "8086:8086"
-  #   environment:
-  #     DOCKER_INFLUXDB_INIT_MODE: setup
-  #     DOCKER_INFLUXDB_INIT_USERNAME: ${INFLUXDB_USERNAME}
-  #     DOCKER_INFLUXDB_INIT_PASSWORD: ${INFLUXDB_PASSWORD}
-  #     DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: ${INFLUXDB_TOKEN}
-  #     DOCKER_INFLUXDB_INIT_ORG: ${INFLUXDB_ORG}
-  #     DOCKER_INFLUXDB_INIT_BUCKET: ${INFLUXDB_BUCKET}
-  #     INFLUXD_HTTP_BIND_ADDRESS: :8086
-  #   volumes:
-  #     - influxdb2-data:/var/lib/influxdb2
-  #   restart: unless-stopped
+  influxdb2:
+    image: influxdb:2-alpine
+    container_name: influxdb2
+    ports:
+      - "8086:8086"
+    environment:
+      DOCKER_INFLUXDB_INIT_MODE: setup
+      DOCKER_INFLUXDB_INIT_USERNAME: ${INFLUXDB_USERNAME}
+      DOCKER_INFLUXDB_INIT_PASSWORD: ${INFLUXDB_PASSWORD}
+      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: ${INFLUXDB_TOKEN}
+      DOCKER_INFLUXDB_INIT_ORG: ${INFLUXDB_ORG}
+      DOCKER_INFLUXDB_INIT_BUCKET: ${INFLUXDB_BUCKET}
+      INFLUXD_HTTP_BIND_ADDRESS: :8086
+    volumes:
+      - influxdb2-data:/var/lib/influxdb2
+    restart: unless-stopped
 
   nodered:
     image: nodered/node-red:latest
@@ -39,10 +38,12 @@ services:
     ports:
       - "1880:1880"
     environment:
+      - CREDENTIAL_SECRET=${CREDENTIAL_SECRET}
       - INFLUXDB_HOST=influxdb2
       - INFLUXDB_TOKEN=${INFLUXDB_TOKEN}
       - INFLUXDB_ORG=${INFLUXDB_ORG}
       - INFLUXDB_BUCKET=${INFLUXDB_BUCKET}
+      - INFLUXDB_URL=${INFLUXDB_URL}
       - MQTT_BROKER=mosquitto
       - MQTT_PORT=1883
       - MQTT_USERNAME=${MQTT_USERNAME}
@@ -76,7 +77,7 @@ services:
   #   restart: unless-stopped
 
 volumes:
-  # influxdb2-data:
+  influxdb2-data:
   nodered-data:
   mosquitto-data-dev:
   mosquitto-logs-dev:
