fix: tsl2561 integration time wait on power

--- a/docker/compose.dev.yml
+++ b/docker/compose.dev.yml
@@ -33,7 +33,9 @@ services:
     restart: unless-stopped
 
   nodered:
-    image: nodered/node-red:latest
+    build:
+      context: .
+      dockerfile: Dockerfile.nodered
     container_name: nodered  
     ports:
       - "1880:1880"
