--- a/docker/compose.dev.yml
+++ b/docker/compose.dev.yml
@@ -32,33 +32,55 @@ services:
       - influxdb2-data:/var/lib/influxdb2
     restart: unless-stopped
 
-  nodered:
-    build:
-      context: .
-      dockerfile: Dockerfile.nodered
-    container_name: nodered  
-    ports:
-      - "1880:1880"
-    environment:
-      - CREDENTIAL_SECRET=${CREDENTIAL_SECRET}
-      - INFLUXDB_HOST=influxdb2
-      - INFLUXDB_TOKEN=${INFLUXDB_TOKEN}
-      - INFLUXDB_ORG=${INFLUXDB_ORG}
-      - INFLUXDB_BUCKET=${INFLUXDB_BUCKET}
-      - INFLUXDB_URL=${INFLUXDB_URL}
-      - MQTT_BROKER=mosquitto
-      - MQTT_PORT=1883
-      - MQTT_USERNAME=${MQTT_USERNAME}
-      - MQTT_PASSWORD=${MQTT_PASSWORD}
-      - MQTT_TOPIC=${MQTT_TOPIC}
-    volumes:
-      - ./nodered:/data
-    depends_on:
-      influxdb2:
-        condition: service_started
-      mosquitto:
-        condition: service_started
-    restart: unless-stopped
+  telegraf:
+      image: telegraf:latest
+      container_name: telegraf
+      depends_on:
+        influxdb2:
+          condition: service_started
+        mosquitto:
+          condition: service_started
+      environment:
+        - INFLUXDB_TOKEN=${INFLUXDB_TOKEN}
+        - INFLUXDB_ORG=${INFLUXDB_ORG}
+        - INFLUXDB_BUCKET=${INFLUXDB_BUCKET}
+        - INFLUXDB_URL=${INFLUXDB_URL}
+        - MQTT_BROKER=mosquitto
+        - MQTT_PORT=1883
+        - MQTT_USERNAME=${MQTT_USERNAME}
+        - MQTT_PASSWORD=${MQTT_PASSWORD}
+        - MQTT_TOPIC=${MQTT_TOPIC}
+      volumes:
+        - ./telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
+      restart: unless-stopped
+
+  # nodered:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile.nodered
+  #   container_name: nodered  
+  #   ports:
+  #     - "1880:1880"
+  #   environment:
+  #     - CREDENTIAL_SECRET=${CREDENTIAL_SECRET}
+  #     - INFLUXDB_HOST=influxdb2
+  #     - INFLUXDB_TOKEN=${INFLUXDB_TOKEN}
+  #     - INFLUXDB_ORG=${INFLUXDB_ORG}
+  #     - INFLUXDB_BUCKET=${INFLUXDB_BUCKET}
+  #     - INFLUXDB_URL=${INFLUXDB_URL}
+  #     - MQTT_BROKER=mosquitto
+  #     - MQTT_PORT=1883
+  #     - MQTT_USERNAME=${MQTT_USERNAME}
+  #     - MQTT_PASSWORD=${MQTT_PASSWORD}
+  #     - MQTT_TOPIC=${MQTT_TOPIC}
+  #   volumes:
+  #     - ./nodered:/data
+  #   depends_on:
+  #     influxdb2:
+  #       condition: service_started
+  #     mosquitto:
+  #       condition: service_started
+  #   restart: unless-stopped
 
   grafana:
     image: grafana/grafana:latest
