migrate to esp-idf-lib

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,11 +2,11 @@ idf_component_register(
   SRCS
   "app_main.c"
   REQUIRES
+  i2cdev
   app_config
   sensor_data
   wifi_manager
   mqtt_manager
-  bus_manager
   fast_sensor_service
   soil_sensor_service
   nvs_flash)
