feat: docker add humidty

--- a/docker/telegraf/telegraf.conf
+++ b/docker/telegraf/telegraf.conf
@@ -52,6 +52,19 @@
   tagexclude = ["topic"]
 
 ###############################################################################
+# MQTT Consumer - Temperature
+###############################################################################
+[[inputs.mqtt_consumer]]
+  servers = ["tcp://${MQTT_BROKER}:${MQTT_PORT}"]
+  topics = ["growgrid/telemetry/humidity"]
+  username = "${MQTT_USERNAME}"
+  password = "${MQTT_PASSWORD}"
+  data_format = "value"
+  data_type = "float"
+  name_override = "humidity"
+  tagexclude = ["topic"]
+
+###############################################################################
 # Output to InfluxDB v2
 ###############################################################################
 [[outputs.influxdb_v2]]
