feat: reliable mqtt coms and timestamps with sensors data

--- a/docker/telegraf/telegraf.conf
+++ b/docker/telegraf/telegraf.conf
@@ -2,8 +2,6 @@
 # Global Agent Configuration
 ###############################################################################
 [agent]
-  debug = true
-  quiet = false
   interval = "5s"
   round_interval = true
   metric_batch_size = 1000
@@ -11,6 +9,8 @@
   flush_interval = "2s"
   flush_jitter = "0s"
   omit_hostname = true
+  debug = true
+  quiet = false
 
 ###############################################################################
 # MQTT Consumer - Light
@@ -20,8 +20,9 @@
   topics = ["growgrid/telemetry/light"]
   username = "${MQTT_USERNAME}"
   password = "${MQTT_PASSWORD}"
-  data_format = "value"
-  data_type = "integer"
+  data_format = "json"
+  json_time_key = "timestamp_us"
+  json_time_format = "unix_us"
   name_override = "light"
   tagexclude = ["topic"]
 
@@ -33,8 +34,9 @@
   topics = ["growgrid/telemetry/soil_moisture"]
   username = "${MQTT_USERNAME}"
   password = "${MQTT_PASSWORD}"
-  data_format = "value"
-  data_type = "integer"
+  data_format = "json"
+  json_time_key = "timestamp_us"
+  json_time_format = "unix_us"
   name_override = "soil_moisture"
   tagexclude = ["topic"]
 
@@ -46,21 +48,23 @@
   topics = ["growgrid/telemetry/temperature"]
   username = "${MQTT_USERNAME}"
   password = "${MQTT_PASSWORD}"
-  data_format = "value"
-  data_type = "float"
+  data_format = "json"
+  json_time_key = "timestamp_us"
+  json_time_format = "unix_us"
   name_override = "temperature"
   tagexclude = ["topic"]
 
 ###############################################################################
-# MQTT Consumer - Temperature
+# MQTT Consumer - Humidity
 ###############################################################################
 [[inputs.mqtt_consumer]]
   servers = ["tcp://${MQTT_BROKER}:${MQTT_PORT}"]
   topics = ["growgrid/telemetry/humidity"]
   username = "${MQTT_USERNAME}"
   password = "${MQTT_PASSWORD}"
-  data_format = "value"
-  data_type = "float"
+  data_format = "json"
+  json_time_key = "timestamp_us"
+  json_time_format = "unix_us"
   name_override = "humidity"
   tagexclude = ["topic"]
 
