--- a/main/components/platform/CMakeLists.txt
+++ b/main/components/platform/CMakeLists.txt
@@ -1,15 +1,18 @@
 idf_component_register(
-    SRCS
-        "event_bus.c"
-        "platform_mqtt.c"
-        "platform_wifi.c"
-    INCLUDE_DIRS
-        "include"
-    REQUIRES
-        esp_wifi
-        esp_event
-        mqtt
-        core
-        secrets
-        app
-)
+  SRCS
+  "event_bus.c"
+  "platform_mqtt.c"
+  "platform_wifi.c"
+  "platform_sntp.c"
+  INCLUDE_DIRS
+  "include"
+  REQUIRES
+  esp_wifi
+  esp_event
+  mqtt
+  core
+  secrets
+  app
+  json
+  lwip
+  esp_netif)
