fix: rm health check in docker dependencies

--- a/docker/compose.prod.yml
+++ b/docker/compose.prod.yml
@@ -58,7 +58,7 @@ services:
     container_name: telegraf
     depends_on:
       influxdb2:
-        condition: service_healthy
+        condition: service_started
       mosquitto:
         condition: service_started
     environment:
