--- a/docker/telegraf/telegraf.conf
+++ b/docker/telegraf/telegraf.conf
@@ -1,6 +1,3 @@
-###############################################################################
-# Global Agent Configuration
-###############################################################################
 [agent]
   interval = "5s"
   round_interval = true
@@ -9,70 +6,28 @@
   flush_interval = "2s"
   flush_jitter = "0s"
   omit_hostname = true
-  debug = true
+  debug = false
   quiet = false
 
-###############################################################################
-# MQTT Consumer - Light
-###############################################################################
 [[inputs.mqtt_consumer]]
-  servers = ["tcp://${MQTT_BROKER}:${MQTT_PORT}"]
-  topics = ["growgrid/telemetry/light"]
+  servers = ["tcp://mosquitto:1883"]
+  topics = [
+    "growgrid/telemetry/light",
+    "growgrid/telemetry/soil_moisture", 
+    "growgrid/telemetry/temperature",
+    "growgrid/telemetry/humidity"
+  ]
   username = "${MQTT_USERNAME}"
   password = "${MQTT_PASSWORD}"
   data_format = "json"
   json_time_key = "timestamp_us"
   json_time_format = "unix_us"
-  name_override = "light"
   tagexclude = ["topic"]
+  [inputs.mqtt_consumer.tags]
+    sensor_type = "{{.topic | regexReplaceAll \"growgrid/telemetry/(.+)\" \"$1\"}}"
 
-###############################################################################
-# MQTT Consumer - Soil Moisture
-###############################################################################
-[[inputs.mqtt_consumer]]
-  servers = ["tcp://${MQTT_BROKER}:${MQTT_PORT}"]
-  topics = ["growgrid/telemetry/soil_moisture"]
-  username = "${MQTT_USERNAME}"
-  password = "${MQTT_PASSWORD}"
-  data_format = "json"
-  json_time_key = "timestamp_us"
-  json_time_format = "unix_us"
-  name_override = "soil_moisture"
-  tagexclude = ["topic"]
-
-###############################################################################
-# MQTT Consumer - Temperature
-###############################################################################
-[[inputs.mqtt_consumer]]
-  servers = ["tcp://${MQTT_BROKER}:${MQTT_PORT}"]
-  topics = ["growgrid/telemetry/temperature"]
-  username = "${MQTT_USERNAME}"
-  password = "${MQTT_PASSWORD}"
-  data_format = "json"
-  json_time_key = "timestamp_us"
-  json_time_format = "unix_us"
-  name_override = "temperature"
-  tagexclude = ["topic"]
-
-###############################################################################
-# MQTT Consumer - Humidity
-###############################################################################
-[[inputs.mqtt_consumer]]
-  servers = ["tcp://${MQTT_BROKER}:${MQTT_PORT}"]
-  topics = ["growgrid/telemetry/humidity"]
-  username = "${MQTT_USERNAME}"
-  password = "${MQTT_PASSWORD}"
-  data_format = "json"
-  json_time_key = "timestamp_us"
-  json_time_format = "unix_us"
-  name_override = "humidity"
-  tagexclude = ["topic"]
-
-###############################################################################
-# Output to InfluxDB v2
-###############################################################################
 [[outputs.influxdb_v2]]
   urls = ["${INFLUXDB_URL}"]
-  token = "${INFLUXDB_TOKEN}"
+  token = "${INFLUX_TOKEN}"
   organization = "${INFLUXDB_ORG}"
   bucket = "${INFLUXDB_BUCKET}"
