--- a/docker/grafana/provisioning/dashboards/dashboards.yml
+++ b/docker/grafana/provisioning/dashboards/dashboards.yml
@@ -1,11 +1,12 @@
 apiVersion: 1
 
 providers:
-  - name: 'default'
+  - name: 'growgrid-dashboards'
     orgId: 1
-    folder: ''
+    folder: 'GrowGrid'
     type: file
     disableDeletion: false
     updateIntervalSeconds: 10
+    allowUiUpdates: true
     options:
       path: /var/lib/grafana/dashboards
