--- a/docker/mosquitto/mosquitto.conf
+++ b/docker/mosquitto/mosquitto.conf
@@ -3,3 +3,8 @@ allow_anonymous false
 password_file /mosquitto/data/passwd
 persistence true
 persistence_location /mosquitto/data/
+log_dest file /mosquitto/data/mosquitto.log
+log_type error
+log_type warning
+log_type notice
+log_type information
