docker mosquitto influx telegraf prod

--- a/docker/telegraf/telegraf.conf
+++ b/docker/telegraf/telegraf.conf
@@ -9,25 +9,35 @@
   debug = false
   quiet = false
 
+# Use Docker secretstore, not file!
+[[secretstores.docker]]
+  id = "docker_store"
+
 [[inputs.mqtt_consumer]]
   servers = ["tcp://mosquitto:1883"]
   topics = [
     "growgrid/telemetry/light",
-    "growgrid/telemetry/soil_moisture", 
+    "growgrid/telemetry/soil_moisture",
     "growgrid/telemetry/temperature",
     "growgrid/telemetry/humidity"
   ]
-  username = "${MQTT_USERNAME}"
-  password = "${MQTT_PASSWORD}"
+  username = "@{docker_store:mqtt_username}"
+  password = "@{docker_store:mqtt_password}"
   data_format = "json"
   json_time_key = "timestamp_us"
   json_time_format = "unix_us"
   tagexclude = ["topic"]
-  [inputs.mqtt_consumer.tags]
-    sensor_type = "{{.topic | regexReplaceAll \"growgrid/telemetry/(.+)\" \"$1\"}}"
+
+[[processors.regex]]
+  namepass = ["mqtt_consumer"]
+  [[processors.regex.tags]]
+    key = "topic"
+    pattern = "^growgrid/telemetry/(.+)$"
+    replacement = "${1}"
+    result_key = "sensor_type"
 
 [[outputs.influxdb_v2]]
   urls = ["${INFLUXDB_URL}"]
-  token = "${INFLUX_TOKEN}"
+  token = "@{docker_store:influx_token_telegraf}"
   organization = "${INFLUXDB_ORG}"
   bucket = "${INFLUXDB_BUCKET}"
