--- a/docker/compose.prod.yml
+++ b/docker/compose.prod.yml
@@ -1,143 +1,114 @@
 name: growgrid
 
-x-common-security: &common-security
-  read_only: true
-  security_opt:
-    - no-new-privileges:true
-  restart: unless-stopped
-
 services:
-  config-init:
-    image: alpine:3.19
-    container_name: growgrid-config-init
-    volumes:
-      - ${CONFIG_PATH}/grafana/provisioning:/src:ro
-      - grafana-config:/dst
-      - ${SECRETS_PATH}:/secrets:ro
-    environment:
-      INFLUXDB_ORG: ${INFLUXDB_ORG}
-      INFLUXDB_BUCKET: ${INFLUXDB_BUCKET}
-      INFLUXDB_URL: ${INFLUXDB_URL}
-    command: |
-      sh -c '
-        export INFLUXDB_TOKEN="$(cat /secrets/influx_token_grafana)"
-        mkdir -p /dst/datasources /dst/dashboards
-        envsubst < /src/datasources/influxdb.yml > /dst/datasources/influxdb.yml
-        envsubst < /src/dashboards/dashboards.yml > /dst/dashboards/dashboards.yml
-        echo "Configuration prepared successfully"
-      '
-    restart: "no"
-
   mosquitto:
-    image: eclipse-mosquitto:2.0.18
-    container_name: growgrid-mosquitto
-    <<: *common-security
-    read_only: false
+    image: eclipse-mosquitto:2
+    container_name: mosquitto
+    restart: unless-stopped
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "timeout 5 sh -c 'nc -z 127.0.0.1 1883' || exit 1",
+        ]
+      interval: 30s
+      timeout: 5s
+      retries: 5
+      start_period: 20s
     ports:
       - "1883:1883"
     volumes:
-      - ${CONFIG_PATH}/mosquitto:/mosquitto/config:ro
-      - ${DATA_PATH}/mosquitto:/mosquitto/data
-      - ${SECRETS_PATH}:/mosquitto/secrets:ro
-    tmpfs:
-      - /tmp
-    command: |
-      sh -c '
-        if [ ! -f /mosquitto/data/passwd ]; then
-          mosquitto_passwd -b -c /mosquitto/data/passwd "$(cat /mosquitto/secrets/mqtt_username)" "$(cat /mosquitto/secrets/mqtt_password)"
-        fi
-        exec mosquitto -c /mosquitto/config/mosquitto.conf
-      '
+      - /srv/growgrid/config/mosquitto:/mosquitto/config
+      - /srv/growgrid/data/mosquitto/data:/mosquitto/data
+      - /srv/growgrid/data/mosquitto/log:/mosquitto/log
 
   influxdb2:
     image: influxdb:2.7-alpine
-    container_name: growgrid-influxdb2
-    <<: *common-security
-    read_only: false
+    container_name: influxdb2
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-fsS", "http://localhost:8086/health"]
+      interval: 10s
+      timeout: 3s
+      retries: 18
+      start_period: 20s
     ports:
       - "8086:8086"
     environment:
       DOCKER_INFLUXDB_INIT_MODE: setup
       DOCKER_INFLUXDB_INIT_USERNAME_FILE: /run/secrets/influx_username
       DOCKER_INFLUXDB_INIT_PASSWORD_FILE: /run/secrets/influx_password
-      DOCKER_INFLUXDB_INIT_ORG: ${INFLUXDB_ORG}
-      DOCKER_INFLUXDB_INIT_BUCKET: ${INFLUXDB_BUCKET}
+      DOCKER_INFLUXDB_INIT_ORG: growgrid
+      DOCKER_INFLUXDB_INIT_BUCKET: growgrid
       DOCKER_INFLUXDB_INIT_RETENTION: 2160h
       INFLUXD_HTTP_BIND_ADDRESS: :8086
-    env_file:
-      - ./.env
     secrets:
       - influx_username
       - influx_password
     volumes:
-      - ${DATA_PATH}/influxdb2:/var/lib/influxdb2
-
+      - /srv/growgrid/data/influxdb2:/var/lib/influxdb2
+      - /srv/growgrid/appdata/influxdb2/config:/etc/influxdb2
+      
   telegraf:
-    image: telegraf:1.30-alpine
-    container_name: growgrid-telegraf
-    <<: *common-security
+    image: telegraf:1.35
+    container_name: telegraf
+    restart: unless-stopped
     depends_on:
-      - influxdb2
-      - mosquitto
+      influxdb2:
+        condition: service_healthy
+      mosquitto:
+        condition: service_healthy
     environment:
-      INFLUXDB_ORG: ${INFLUXDB_ORG}
-      INFLUXDB_BUCKET: ${INFLUXDB_BUCKET}
-      INFLUXDB_URL: ${INFLUXDB_URL}
-    env_file:
-      - ./.env
+      INFLUXDB_URL: http://influxdb2:8086
+      INFLUXDB_ORG: growgrid
+      INFLUXDB_BUCKET: growgrid
     secrets:
       - influx_token_telegraf
       - mqtt_username
       - mqtt_password
     volumes:
-      - ${CONFIG_PATH}/telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
-    command: |
-      sh -c '
-        export INFLUX_TOKEN="$(cat /run/secrets/influx_token_telegraf)"
-        export MQTT_USERNAME="$(cat /run/secrets/mqtt_username)" 
-        export MQTT_PASSWORD="$(cat /run/secrets/mqtt_password)"
-        exec telegraf --config /etc/telegraf/telegraf.conf
-      '
+      - /srv/projects/growgrid/docker/telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro 
 
-  grafana:
-    image: grafana/grafana:10.4.5
-    container_name: growgrid-grafana
-    <<: *common-security
-    read_only: false
-    depends_on:
-      config-init:
-        condition: service_completed_successfully
-    ports:
-      - "3000:3000"
-    environment:
-      GF_SECURITY_ADMIN_USER__FILE: /run/secrets/grafana_admin_user
-      GF_SECURITY_ADMIN_PASSWORD__FILE: /run/secrets/grafana_admin_password
-      GF_INSTALL_PLUGINS: ""
-    secrets:
-      - grafana_admin_user
-      - grafana_admin_password
-    volumes:
-      - ${DATA_PATH}/grafana:/var/lib/grafana
-      - grafana-config:/etc/grafana/provisioning:ro
-      - ${CONFIG_PATH}/grafana/dashboards:/var/lib/grafana/dashboards:ro
-
-volumes:
-  grafana-config:
+  # grafana:
+  #   image: grafana/grafana:10.4.5
+  #   container_name: grafana
+  #   restart: unless-stopped
+  #   networks: [growgrid]
+  #   ports:
+  #     - "192.168.178.45:3000:3000"
+  #   environment:
+  #     GF_SECURITY_ADMIN_USER__FILE: /run/secrets/grafana_admin_user
+  #     GF_SECURITY_ADMIN_PASSWORD__FILE: /run/secrets/grafana_admin_password
+  #     INFLUXDB_URL: http://influxdb2:8086
+  #     INFLUXDB_ORG: GrowGrid
+  #     INFLUXDB_BUCKET: growgrid
+  #     INFLUXDB_TOKEN__FILE: /run/secrets/influx_token_grafana
+  #   secrets:
+  #     - grafana_admin_user
+  #     - grafana_admin_password
+  #     - influx_token_grafana
+  #   volumes:
+  #     - /srv/growgrid/data/grafana:/var/lib/grafana
+  #     - /srv/projects/growgrid/grafana/provisioning:/etc/grafana/provisioning:ro
+  #     - /srv/projects/growgrid/grafana/dashboards:/var/lib/grafana/dashboards:ro
+  #   stop_grace_period: 20s
+  #   read_only: false
+  #   <<: [*common-sec]
 
 secrets:
-  mqtt_username:
-    file: ${SECRETS_PATH}/mqtt_username
-  mqtt_password:
-    file: ${SECRETS_PATH}/mqtt_password
   influx_username:
-    file: ${SECRETS_PATH}/influx_username
+    file: /srv/growgrid/secrets/influx_username
   influx_password:
-    file: ${SECRETS_PATH}/influx_password
+    file: /srv/growgrid/secrets/influx_password
   influx_token_telegraf:
-    file: ${SECRETS_PATH}/influx_token_telegraf
+    file: /srv/growgrid/secrets/influx_token_telegraf
+  mqtt_username:
+    file: /srv/growgrid/secrets/mqtt_username
+  mqtt_password:
+    file: /srv/growgrid/secrets/mqtt_password
   influx_token_grafana:
-    file: ${SECRETS_PATH}/influx_token_grafana
+    file: /srv/growgrid/secrets/influx_token_grafana
   grafana_admin_user:
-    file: ${SECRETS_PATH}/grafana_admin_user
+    file: /srv/growgrid/secrets/grafana_admin_user
   grafana_admin_password:
-    file: ${SECRETS_PATH}/grafana_admin_password
+    file: /srv/growgrid/secrets/grafana_admin_password
