--- a/docker/compose.dev.yml
+++ b/docker/compose.dev.yml
@@ -1,79 +1,69 @@
 name: growgrid
 services:
   mosquitto:
-    build:
-      context: .
-      dockerfile: Dockerfile.mosquitto
+    image: eclipse-mosquitto:2
     container_name: mosquitto
     restart: unless-stopped
     ports:
       - "1883:1883"
-    environment:
-      - MQTT_USERNAME=${MQTT_USERNAME}
-      - MQTT_PASSWORD=${MQTT_PASSWORD}
     volumes:
+      - ./mosquitto/mosquitto.dev.conf:/mosquitto/config/mosquitto.conf:ro
       - mosquitto-data-dev:/mosquitto/data
       - mosquitto-logs-dev:/mosquitto/log
 
   influxdb2:
     image: influxdb:2-alpine
     container_name: influxdb2
+    restart: unless-stopped
     ports:
       - "8086:8086"
     environment:
       DOCKER_INFLUXDB_INIT_MODE: setup
       DOCKER_INFLUXDB_INIT_USERNAME: ${INFLUXDB_USERNAME}
       DOCKER_INFLUXDB_INIT_PASSWORD: ${INFLUXDB_PASSWORD}
-      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: ${INFLUXDB_TOKEN}
-      DOCKER_INFLUXDB_INIT_ORG: ${INFLUXDB_ORG}
-      DOCKER_INFLUXDB_INIT_BUCKET: ${INFLUXDB_BUCKET}
+      DOCKER_INFLUXDB_INIT_ORG: growgrid
+      DOCKER_INFLUXDB_INIT_BUCKET: growgrid
       INFLUXD_HTTP_BIND_ADDRESS: :8086
     volumes:
       - influxdb2-data:/var/lib/influxdb2
-    restart: unless-stopped
 
   telegraf:
-      image: telegraf:latest
-      container_name: telegraf
-      depends_on:
-        influxdb2:
-          condition: service_started
-        mosquitto:
-          condition: service_started
-      environment:
-        - INFLUXDB_TOKEN=${INFLUXDB_TOKEN}
-        - INFLUXDB_ORG=${INFLUXDB_ORG}
-        - INFLUXDB_BUCKET=${INFLUXDB_BUCKET}
-        - INFLUXDB_URL=${INFLUXDB_URL}
-        - MQTT_BROKER=mosquitto
-        - MQTT_PORT=1883
-        - MQTT_USERNAME=${MQTT_USERNAME}
-        - MQTT_PASSWORD=${MQTT_PASSWORD}
-        - MQTT_TOPIC=${MQTT_TOPIC}
-      volumes:
-        - ./telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
-      restart: unless-stopped
+    image: telegraf:latest
+    container_name: telegraf
+    restart: unless-stopped
+    depends_on:
+      influxdb2:
+        condition: service_started
+      mosquitto:
+        condition: service_started
+    environment:
+      - INFLUXDB_ORG=growgrid
+      - INFLUXDB_BUCKET=growgrid
+      - INFLUXDB_URL=http://influxdb2:8086
+      - MQTT_BROKER=mosquitto
+      - MQTT_PORT=1883
+    volumes:
+      - ./telegraf/telegraf.dev.conf:/etc/telegraf/telegraf.conf:ro
 
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
+    restart: unless-stopped
     ports:
       - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_USERNAME}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD}
+      - INFLUXDB_ORG=growgrid
+      - INFLUXDB_BUCKET=growgrid
+      - INFLUXDB_URL=http://influxdb2:8086
+    depends_on:
+      influxdb2:
+        condition: service_started
     volumes:
       - grafana-data:/var/lib/grafana
       - ./grafana/provisioning:/etc/grafana/provisioning
       - ./grafana/dashboards:/var/lib/grafana/dashboards
-    environment:
-      - GF_SECURITY_ADMIN_USER=${GRAFANA_USERNAME}
-      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD}
-      - INFLUXDB_TOKEN=${INFLUXDB_TOKEN}
-      - INFLUXDB_ORG=${INFLUXDB_ORG}
-      - INFLUXDB_BUCKET=${INFLUXDB_BUCKET}
-      - INFLUXDB_URL=${INFLUXDB_URL}
-    depends_on:
-      influxdb2:
-        condition: service_started
-    restart: unless-stopped
 
 volumes:
   influxdb2-data:
