fix: telegraf dev setup

--- a/docker/telegraf/telegraf.dev.conf
+++ b/docker/telegraf/telegraf.dev.conf
@@ -13,14 +13,13 @@
   servers = ["tcp://mosquitto:1883"]
   topics = [
     "growgrid/telemetry/light",
-    "growgrid/telemetry/soil_moisture",
+    "growgrid/telemetry/soil_moisture", 
     "growgrid/telemetry/temperature",
     "growgrid/telemetry/humidity"
   ]
   data_format = "json"
   json_time_key = "timestamp_us"
   json_time_format = "unix_us"
-  tagexclude = ["topic"]
 
 [[processors.regex]]
   namepass = ["mqtt_consumer"]
@@ -30,8 +29,17 @@
     replacement = "${1}"
     result_key = "sensor_type"
 
+[[processors.converter]]
+  namepass = ["mqtt_consumer"]
+  [processors.converter.tags]
+    measurement = ["sensor_type"]
+
+[[processors.enum]]
+  namepass = ["humidity", "light", "soil_moisture", "temperature"]
+  tagexclude = ["topic", "sensor_type"]
+
 [[outputs.influxdb_v2]]
   urls = ["${INFLUXDB_URL}"]
   token = "${INFLUXDB_TOKEN}"
-  organization = "${INFLUXDB_ORG}"
-  bucket = "${INFLUXDB_BUCKET}"
+  organization = "growgrid"
+  bucket = "growgrid"
