--- a/docker/compose.dev.yml
+++ b/docker/compose.dev.yml
@@ -18,9 +18,12 @@ services:
     ports:
       - "8086:8086"
     environment:
+      INFLUXD_HTTP_AUTH_ENABLED: "false"
+      INFLUXD_REPORTING_DISABLED: "true"
       DOCKER_INFLUXDB_INIT_MODE: setup
       DOCKER_INFLUXDB_INIT_USERNAME: ${INFLUXDB_USERNAME}
       DOCKER_INFLUXDB_INIT_PASSWORD: ${INFLUXDB_PASSWORD}
+      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: ${INFLUXDB_TOKEN}
       DOCKER_INFLUXDB_INIT_ORG: growgrid
       DOCKER_INFLUXDB_INIT_BUCKET: growgrid
       INFLUXD_HTTP_BIND_ADDRESS: :8086
@@ -37,11 +40,10 @@ services:
       mosquitto:
         condition: service_started
     environment:
-      - INFLUXDB_ORG=growgrid
-      - INFLUXDB_BUCKET=growgrid
       - INFLUXDB_URL=http://influxdb2:8086
       - MQTT_BROKER=mosquitto
       - MQTT_PORT=1883
+      - INFLUXDB_TOKEN=${INFLUXDB_TOKEN}
     volumes:
       - ./telegraf/telegraf.dev.conf:/etc/telegraf/telegraf.conf:ro
 
@@ -57,6 +59,7 @@ services:
       - INFLUXDB_ORG=growgrid
       - INFLUXDB_BUCKET=growgrid
       - INFLUXDB_URL=http://influxdb2:8086
+      - INFLUXDB_TOKEN=${INFLUXDB_TOKEN}
     depends_on:
       influxdb2:
         condition: service_started
