fix: set telegraf qos to 1

--- a/docker/telegraf/telegraf.conf
+++ b/docker/telegraf/telegraf.conf
@@ -20,12 +20,12 @@
     "growgrid/telemetry/temperature",
     "growgrid/telemetry/humidity"
   ]
+  qos = 1
   username = "@{docker_store:mqtt_username}"
   password = "@{docker_store:mqtt_password}"
   data_format = "json"
   json_time_key = "timestamp_us"
   json_time_format = "unix_us"
-  tagexclude = ["topic"]
 
 [[processors.regex]]
   namepass = ["mqtt_consumer"]
@@ -35,8 +35,17 @@
     replacement = "${1}"
     result_key = "sensor_type"
 
+[[processors.converter]]
+  namepass = ["mqtt_consumer"]
+  [processors.converter.tags]
+    measurement = ["sensor_type"]
+
+[[processors.enum]]
+  namepass = ["humidity", "light", "soil_moisture", "temperature"]
+  tagexclude = ["topic", "sensor_type"]
+
 [[outputs.influxdb_v2]]
-  urls = ["${INFLUXDB_URL}"]
+  urls = ["http://influxdb2:8086"]
   token = "@{docker_store:influx_token_telegraf}"
-  organization = "${INFLUXDB_ORG}"
-  bucket = "${INFLUXDB_BUCKET}"
+  organization = "growgrid"
+  bucket = "growgrid"
