--- a/docker/telegraf/telegraf.dev.conf
+++ b/docker/telegraf/telegraf.dev.conf
@@ -17,6 +17,7 @@
     "growgrid/telemetry/temperature",
     "growgrid/telemetry/humidity"
   ]
+  qos = 1
   data_format = "json"
   json_time_key = "timestamp_us"
   json_time_format = "unix_us"
@@ -39,7 +40,7 @@
   tagexclude = ["topic", "sensor_type"]
 
 [[outputs.influxdb_v2]]
-  urls = ["${INFLUXDB_URL}"]
+  urls = ["http://influxdb2:8086"]
   token = "${INFLUXDB_TOKEN}"
   organization = "growgrid"
   bucket = "growgrid"
