--- a/docker/.env.dev.example
+++ b/docker/.env.dev.example
@@ -1,16 +1,10 @@
-INFLUXDB_USERNAME=NAME
-INFLUXDB_PASSWORD=PW
-INFLUXDB_TOKEN=TOKEN
-INFLUXDB_ORG=ORG
-INFLUXDB_BUCKET=BUCKET
-INFLUXDB_URL=URL
+export SERVER_IP=
 
-GRAFANA_USERNAME=NAME
-GRAFANA_PASSWORD=PW
+INFLUXDB_USERNAME=USERNAME
+INFLUXDB_PASSWORD=PASSWORD
+INFLUXDB_TOKEN=influx-dev-token
 
-MQTT_USERNAME=NAME
-MQTT_PASSWORD=PW
-MQTT_TOPIC=TOPIC
+GRAFANA_USERNAME=USERNAME
+GRAFANA_PASSWORD=PASSWORD
 
-CREDENTIAL_SECRET=SECRET
-
+MQTT_TOPIC=growgrid/telemetry/#
