--- a/docker/mosquitto/mosquitto.dev.conf
+++ b/docker/mosquitto/mosquitto.dev.conf
@@ -1,6 +1,16 @@
-listener 1883
-allow_anonymous true
+listener 8883
+
+cafile /mosquitto/config/certs/ca.crt
+certfile /mosquitto/config/certs/server.crt
+keyfile /mosquitto/config/certs/server.key
+
+tls_version tlsv1.2
+require_certificate true
+use_identity_as_username true
+allow_anonymous false
+
 log_dest file /mosquitto/log/mosquitto.log
 log_type all
+log_type debug
 connection_messages true
 
