--- a/docker/telegraf/telegraf.dev.conf
+++ b/docker/telegraf/telegraf.dev.conf
@@ -10,7 +10,10 @@
   quiet = false
 
 [[inputs.mqtt_consumer]]
-  servers = ["tcp://mosquitto:1883"]
+  servers = ["ssl://mosquitto:8883"]
+  tls_cert = "/etc/telegraf/certs/telegraf.crt"
+  tls_key = "/etc/telegraf/certs/telegraf.key"
+  tls_ca = "/etc/telegraf/certs/ca.crt"
   topics = [
     "growgrid/telemetry/light",
     "growgrid/telemetry/soil_moisture", 
